--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 </br>
                 </br>
                 </br>
-                <video id="myVidPlayer" controls muted autoplay></video>
+                <video id="myVidPlayer" muted autoplay></video>
             </div>
 
             <div style="display: table-cell;">
@@ -23,32 +23,24 @@
     <canvas id="invisible" hidden></canvas>
     <canvas id="mini"></canvas>
     <div id="fps">0</div>
-    <div id="ascii" style="font-family: monospace; font-size: 13px; line-height: 10px;"></div>
-    <canvas id="c1"></canvas>
-    <canvas id="c2"></canvas>
-    <canvas id="c3"></canvas>
-    <canvas id="c4"></canvas>
+    <!-- <div id="ascii" style="font-family: monospace; font-size: 13px; line-height: 10px;"></div> -->
+    <!-- <div id="ascii" style="font-family: monospace; font-size: 13px; line-height: 8px; font-weight: bold;"></div> -->
+    <div id="ascii" style="font-family: monospace; font-size: 13px; line-height: 8px;"></div>
+    <!-- <div id="ascii" style="font-family: monospace; font-size: 13px; font-weight: bold;"></div> -->
 
     <script type="text/javascript">
         var canvas = document.getElementById("captured");
         var context = canvas.getContext("2d");
         const video = document.getElementById("myVidPlayer");
-        var tc1 = document.getElementById("c1");
-        var ctx1 = tc1.getContext("2d");
-        var tc2 = document.getElementById("c2");
-        var ctx2 = tc2.getContext("2d");
-        var tc3 = document.getElementById("c3");
-        var ctx3 = tc3.getContext("2d");
-        var tc4 = document.getElementById("c4");
-        var ctx4 = tc4.getContext("2d");
 
         let invisible_canvas = document.getElementById("invisible");
         let inv_ctx = invisible_canvas.getContext("2d");
         let ascii_div = document.getElementById("ascii");
         let ascii_w, ascii_h;
         let ascii_ratio = 4;
+        let ascii_greys = Array.from("@xo*;,-. ");
         // let ascii_greys = Array.from(" .:-=+*#%@");
-        let ascii_greys = Array.from(" .:-=+*#%@").reverse();
+        // let ascii_greys = Array.from(" .:-=+*#%@").reverse();
         // let ascii_greys = Array.from("X ");
         // let ascii_greys = Array.from("$@B%8&WM#*oahkbdpqwmZO0QLCJUYXzcvunxrjft/\|()1{}[]?-_+~>i!lI;:,\"^`'. ");
         // let ascii_greys = Array.from("$@B%8&WM#*oahkbdpqwmZO0QLCJUYXzcvunxrjft/\|()1{}[]?-_+~>i!lI;:,\"^`'. ").reverse();
@@ -135,45 +127,7 @@
                 fps.timeStart = Date.now();
             }
 
-            // context.drawImage(video, 0, 0, w, h);
-            // // context.font = "40px Arial";
-            // // context.fillStyle = "green";
-            // // context.fillText("AAAA", 50, 50);
-
-            // let image = context.getImageData(0, 0, w, h);
-            // let new_i = image.data.map((value, index) => index % 4 == 0 || index % 4 == 3 ? value : 0);
-            // ctx1.putImageData(new ImageData(new_i, w, h), 0, 0);
-
-            // new_i = image.data.map((value, index) => index % 4 == 1 || index % 4 == 3 ? value : 0);
-            // ctx2.putImageData(new ImageData(new_i, w, h), 0, 0);
-
-            // new_i = image.data.map((value, index) => index % 4 == 2 || index % 4 == 3 ? value : 0);
-            // ctx3.putImageData(new ImageData(new_i, w, h), 0, 0);
-
-            // new_i = [];
-            // let temp = [];
-            // for (let i = 0; i < image.data.length; i++) {
-            //     if (i % 4 == 0) {
-            //         temp.push(image.data[i] * 0.3);
-            //     }
-            //     else if (i % 4 == 1) {
-            //         temp.push(image.data[i] * 0.6);
-            //     }
-            //     else if (i % 4 == 2) {
-            //         temp.push(image.data[i] * 0.1);
-            //     }
-            //     else if (i % 4 == 3) {
-            //         let grey = Math.floor(temp.pop() + temp.pop() + temp.pop());
-            //         new_i.push(grey);
-            //         new_i.push(grey);
-            //         new_i.push(grey);
-            //         new_i.push(255);
-            //     }
-            // }
-            // ctx4.putImageData(new ImageData(new Uint8ClampedArray(new_i), w, h), 0, 0);
-
             drawAscii();
-
             fps.frames++;
         }
 
@@ -181,7 +135,6 @@
             .then(stream => {
                 video.srcObject = stream;
                 video.onloadedmetadata = (e) => {
-                    console.log("ile razy?");
                     video.play();
 
                     //new
@@ -199,20 +152,11 @@
                     invisible_canvas.width = w;
                     invisible_canvas.height = h;
 
-                    tc1.width = w;
-                    tc1.height = h;
-                    tc2.width = w;
-                    tc2.height = h;
-                    tc3.width = w;
-                    tc3.height = h;
-                    tc4.width = w;
-                    tc4.height = h;
-
                     window.setInterval(snapshot, 10);
                 };
             })
             .catch(error => {
-                alert('You have to enable the mike and the camera');
+                alert('You have to enable your camera');
             });
     </script>
 
