--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             .then(stream => {
                 video.srcObject = stream;
                 video.onloadedmetadata = (e) => {
-                    video.play();
+                    // video.play();
 
                     //new
                     w = video.videoWidth;
