--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
     <h1>ASCII CAMERA</h1>
-    <video id="myVidPlayer" muted autoplay></video>
+    <video id="myVidPlayer" muted autoplay hidden></video>
     <canvas id="captured" hidden></canvas>
     <canvas id="invisible" hidden></canvas>
     <canvas id="mini"></canvas>
